<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_battery_remaining_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remaining_time"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_battery_hour_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@id/tv_battery_remaining_time"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_battery_hour_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/remaining_h"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_battery_hour_value"
        app:layout_constraintStart_toEndOf="@+id/tv_battery_hour_value" />

    <TextView
        android:id="@+id/tv_battery_minutes_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@+id/tv_battery_hour_unit"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_battery_minutes_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/remaining_min"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_battery_hour_value"
        app:layout_constraintStart_toEndOf="@+id/tv_battery_minutes_value" />

    <TextView
        android:id="@+id/tv_consume_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_battery_remaining_time" />

    <TextView
        android:id="@+id/battery_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_percent"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_consume_app" />

    <TextView
        android:id="@+id/charging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_charging"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/battery_percent" />

    <TextView
        android:id="@+id/charging_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charging_type"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/charging" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_temperature"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/charging_type" />

    <TextView
        android:id="@+id/voltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_voltage"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperature" />

    <TextView
        android:id="@+id/total_capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_capacity"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/voltage" />

    <TextView
        android:id="@+id/current_capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_capacity"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_capacity" />

    <TextView
        android:id="@+id/health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_health"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_capacity" />

    <TextView
        android:id="@+id/battery_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battery_type"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/health" />

    <TextView
        android:id="@+id/last_charge_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_charge_speed"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/battery_type" />

    <TextView
        android:id="@+id/last_charge_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_charge_type"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_charge_speed" />

    <TextView
        android:id="@+id/last_charge_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_charge_duration"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_charge_type" />

    <TextView
        android:id="@+id/last_charge_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_charge_quantity"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_charge_duration" />


<!--    <TextView-->
<!--        android:id="@+id/is_dock"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/is_dock"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/last_charge_quantity" />-->

<!--    <TextView-->
<!--        android:id="@+id/dock_state"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/dock_state"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/is_dock" />-->

</androidx.constraintlayout.widget.ConstraintLayout>